--- a/wax-modules/collection_templates.html
+++ b/wax-modules/collection_templates.html
@@ -5,23 +5,25 @@
       background-color: rgba(245, 245, 245, 0.7);
       margin-bottom: 1rem; 
     }
+
   </style>
-  <div class="container mt-4 mb-4">
-    <!-- Dropdown for RpcEndpoint -->
-    <div class="row mb-2">
-      <div class="col-md-6">
-        <select id="rpcSelector" class="form-select">
-        </select>
-      </div>
+<div class="container mt-4 mb-4">
+<div class="row mb-2 justify-content-center">
+    <!-- Dropdown for Hyperion API Endpoint -->
+<div class="col-md-6 text-center text-md-start mb-2 mb-md-0">
+  <select id="rpcSelector" class="form-select">
+    <!-- Options will be populated by JavaScript -->
+  </select>
+</div>
       <!-- Form for Selecting NFT Collection -->
-      <div class="col-md-6">
-        <form id="collectionForm" class="d-flex">
-          <input id="collectionInput" type="text" class="form-control" pattern="[a-z1-5.]{1,12}" placeholder="Enter collection ID" required>
-          <button type="submit" class="btn btn-primary ml-2">Update</button>
-        </form>
-      </div>
-    </div>
-  </div>
+<div class="col-md-6 text-center text-md-start">
+  <form id="collectionForm" class="d-flex justify-content-center justify-content-md-start">
+    <input id="collectionInput" type="text" class="form-control" pattern="[a-z1-5.]{1,12}" placeholder="Enter collection" required>
+    <button type="submit" class="btn btn-primary ml-2">Update</button>
+  </form>
+</div>
+</div>
+</div>
   
   <div class="container">
     <div class="row justify-content-center" id="cardContainer">
